Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 0.80cvs:
	New Features:
	* Support for the Epiphany web browser (Leonardo Serra)
	* Status messages in Gadu-Gadu (Andrew (proton) Wellington)
	* Ability to send files from the conversation window (Daniel Atallah)

	Bug Fixes:
	* The firefox browser option now works with firefox 0.9
	* Buddy icons in conversations no longer depend on the
	  buddy list
	* Fix for the bug where some buddies seemed logged in 4
	  thousand some odd days (Alan Ford)

version 0.79 (06/24/2004):
	New Features:
	* Display name changes are now shown in the conversation windows.
	  (Robert Mibus)
	* Get Info on Yahoo! now works for nonenglish profiles.
	  (Ambrose Li)
	* General "Get Info" improvements on Yahoo! and MSN (Ambrose Li)
	* Yahoo! Japan support. Click More Options and check Yahoo Japan
	  in the account editor, to use your Yahoo! Japan account
	* Gtk themes can now theme the Gaim buddy list independently of
	  other things (Stu Tomlinson)
	* Show timestamps now has a per-conversation option in addition
	  to the global one, bringing it in line with the other conver-
	  sation options (Stu Tomlinson)
	* Added MSN buddy icons (Felipe Contreras)
	* Added MSN file transfer (Felipe Contreras)
	* MSN's idle state now actually sets a buddy idle
	* Buddy pounce defaults are now more sane, and apply to the state the
	  buddy is currently in. For example, if the buddy is idle, set
	  "Return from idle" by default. The last action(s) used are the
	  defaults for the next pounce
	* Yahoo buddy icon support
	* Selected buddy icons will automatically convert to the appropriate
	  format for the protocol. (GTK 2.2 and higher only)
	* Dragging an image file into the Modify Account dialog will set that
	  as a buddy icon.
	* Development headers for compiling third-party plugins are now
	  installed. (Stu Tomlinson)
	* Headers for gaim-remote now reside in gaim/ instead of
	  gaim-include/.